--- a/Inventaire/MainWindowView.xaml
+++ b/Inventaire/MainWindowView.xaml
@@ -44,7 +44,7 @@
             </Menu>
         </StackPanel>
         <ToolBar DockPanel.Dock="Top">
-            <Button >
+            <Button Command="{Binding AddNewItemCommand}">
                 <Image Source="/images/new_user.png" Height="32" Width="32" Stretch="Uniform"/>
             </Button>
             <Separator/>
